@startuml
'https://plantuml.com/class-diagram

abstract class Construccion {
    - vida
    - tiempoConstruccion
    - costos
    + construir()
    + recibirDanio(ataque)
    + esPosibleConstruirEn()
}

interface Defendible {
    +recibirDanio(ataque)
}
class Detectable {
    +recibirDanio(ataque)
}


abstract class ConstruccionZerg {
    + construir()
    + recibirDanio(ataque)
    + esPosibleConstruirEn()
}

class Criadero {
    - moho : Radio
    - larva : int
     +crearZangano()
     +ampliarRadio()
     +esPosibleConstruirEn()
}

class ReservaProduccion {
    -larvas : Collection
    +crearZerling()
    +esPosibleConstruirEn()
}

class Extractor {
    +recolectar(volcan)
    +agregar(Zangano)
    +esPosibleConstruirEn()
}

class Guarida {
    -larvas : Collection
    +crearHidralisco()
    +esPosibleConstruirEn()

}

class Espiral {
    -larvas : Collection
    +crearMutalisco()
    +esPosibleConstruirEn()

}

abstract class ConstruccionProtoss {
    - escudo
    + recibirDanio(ataque)
    + esPosibleConstruirEn()
}

class Asimilador {
    +recolectar(volcan)
    +esPosibleConstruirEn()
}

class NexoMineral {
    +recolectar(nodoMineral)
    +esPosibleConstruirEn()
}

class Pilon {
    - energia : Radio
    +ampliarRadio()
    +esPosibleConstruirEn()
}

class PuertoEstelar {
    +crearScout()
    +esPosibleConstruirEn()
}

class Acceso {
     +crearDragon()
     +crearZealot()
     +esPosibleConstruirEn()
}

interface RefineriaGas {
    +recolectar(Volcan)
}

interface RefineriaMineral {
    +recolectar(NodoMineral)
}

class Larva {
    +mutarZangano()
    +mutarZerling()
    +mutarHidralisco()
    +mutarMutalisco()
}

interface MutadorUnidad {
    +mutarZangano()
    +mutarZerling()
    +mutarHidralisco()
    +mutarMutalisco()
}

Detectable ..|> Defendible
Defendible --o Construccion

Zerg --> ConstruccionZerg
Protoss --> ConstruccionProtoss
ConstruccionZerg -|> Construccion
ConstruccionProtoss -left-|> Construccion

ConstruccionZerg <|---- Criadero
ConstruccionZerg <|---- ReservaProduccion
ConstruccionZerg <|---- Extractor
ConstruccionZerg <|---- Guarida
ConstruccionZerg <|---- Espiral

ConstruccionProtoss <|---- NexoMineral
ConstruccionProtoss <|---- Pilon
ConstruccionProtoss <|---- Asimilador
ConstruccionProtoss <|---- Acceso
ConstruccionProtoss <|---- PuertoEstelar

NexoMineral ..|> RefineriaMineral
Extractor ..|> RefineriaGas
Asimilador ..|> RefineriaGas

Criadero --> Larva
Larva ..|> MutadorUnidad

@enduml